// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCommentEvent is rendered with custom content 1`] = `
<div
  class="euiCommentEvent testClass1 testClass2 emotion-euiCommentEvent-custom"
>
  <div
    class="emotion-euiCommentEvent__body-custom"
  >
    <p>
      Some custom content
    </p>
  </div>
</div>
`;

exports[`EuiCommentEvent props event is rendered 1`] = `
<div
  class="euiCommentEvent emotion-euiCommentEvent-update"
>
  <div
    class="emotion-euiCommentEvent__header"
  >
    <div
      class="euiPanel euiPanel--transparent emotion-euiPanel-grow-m-transparent-euiCommentEvent__headerPanel"
    >
      <div
        class="emotion-euiCommentEvent__headerMain"
      >
        <div
          class="emotion-euiCommentEvent__headerData"
        >
          <div
            class="emotion-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
          <div
            class="emotion-euiCommentEvent__headerEvent"
          >
            commented
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCommentEvent props eventColor is rendered 1`] = `
<div
  class="euiCommentEvent emotion-euiCommentEvent-custom"
/>
`;

exports[`EuiCommentEvent props eventIcon and eventIconAriaLabel are rendered 1`] = `
<div
  class="euiCommentEvent emotion-euiCommentEvent-update"
>
  <div
    class="emotion-euiCommentEvent__header"
  >
    <div
      class="euiPanel euiPanel--transparent emotion-euiPanel-grow-m-transparent-euiCommentEvent__headerPanel"
    >
      <div
        class="emotion-euiCommentEvent__headerMain"
      >
        <div
          class="emotion-euiCommentEvent__headerData"
        >
          <div
            aria-hidden="false"
            aria-label="edit"
            class="euiAvatar euiAvatar--s euiAvatar--user emotion-euiAvatar-s-user-subdued-euiCommentEvent__headerEventIcon"
            role="img"
            title="edit"
          >
            <span
              class="euiAvatar__icon"
              data-euiicon-type="pencil"
            >
              edit
            </span>
          </div>
          <div
            class="emotion-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCommentEvent props timestamp is rendered 1`] = `
<div
  class="euiCommentEvent emotion-euiCommentEvent-update"
>
  <div
    class="emotion-euiCommentEvent__header"
  >
    <div
      class="euiPanel euiPanel--transparent emotion-euiPanel-grow-m-transparent-euiCommentEvent__headerPanel"
    >
      <div
        class="emotion-euiCommentEvent__headerMain"
      >
        <div
          class="emotion-euiCommentEvent__headerData"
        >
          <div
            class="emotion-euiCommentEvent__headerUsername"
          >
            someuser
          </div>
          <div
            class="emotion-euiCommentEvent__headerTimestamp"
          >
            <time>
              21 days ago
            </time>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
